src/test/ui/issue-6458.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-6458.rs:19:4
   |
LL |    foo(TypeWithState(marker::PhantomData));
   |    ^^^ cannot infer type for `State`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0282"
